--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 		 text-align: center;
 		 font-size: 16px;
 		 min-height: 100%;
+		 margin: 0;
 		 font-family: 'Strait', Trebuchet, Arial;
 		 line-height: 25px;
 		 background:#fff;
@@ -29,9 +30,24 @@ p {
 	 font-weight: 400;
 	}
 
+a, a:link, a:visited {
+					 color: #f94a32;
+					 line-height: 1.65em;
+					 padding: 0px;
+					 font-family: Tahoma;
+					 text-decoration:none;
+					 margin: 0 5px;
+					 font-variant: small-caps;
+				  }
+a:hover {
+	color:#333;
+	border-bottom: 3px solid #f94a32;
+	text-decoration: underline;
+}
+
 /********** SECTIONS *********/
 
-span {
+.greeting {
 	font-family: 'Pacifico', cursive;
 	font-size: 40px;
 }
@@ -51,11 +67,14 @@ header {
 	padding-bottom: 50px;
 }
 
-header a:link, header a:visited, header a:active {
-	color: #fff;
+header .text {width: inherit;}
+
+nav { 
+	font-size: 1.2em;
+	color: #fff; 
 }
 
-header .text {width: inherit;}
+nav a:link, nav a:visited, nav a:active { color: #fff; }
 
 footer { clear: both; 
 		 text-align: center;
@@ -96,10 +115,44 @@ footer { clear: both;
 .img-slider {width: 300px !important;
 			margin: auto;
 		}
-.slick-prev { left: -30px; }
+
+.slick-prev, .slick-next { 
+	font-family: 'Pacifico', Impact, cursive;
+	color:#f94a32;
+}
+.slick-prev { 	left: -30px; }
 .slick-next { right: -30px; }
 
+/********** TYPE EFFECT *******/
+.type-effect {
+	font-family: Courier;
+	font-weight: 600;
+	display: inline-block;
+}
+
+.type-cursor {
+	width: 15px;
+	height: 7px;
+	background: #000;
+	display: inline-block;
+}
+
 /********** MISC *************/
+
+.to-top {
+	display:inline;
+	position:fixed;
+	z-index: 999;
+	width: 60px;
+	height: 30px;
+	bottom: 0;
+	right: 100px;
+	padding-bottom: 25px;
+	margin: 0;
+	display: none;
+	font-size: 16px;
+}
+.top-of-page {margin:0;}
 
 hr {
 	border-top:1px solid #bababa; 
@@ -111,10 +164,6 @@ hr {
 	margin: 2em auto;
 	clear:both;
 }
-
-code {
-	font-family:courier;
-	font-weight: 600;}
 
 .stack {
 	color: #ff5139;
@@ -139,22 +188,6 @@ strong {
 	 line-height: 1.93em;
 }
 
-nav { font-size: 1.2em; }
-
-a, a:link, a:visited {
-					 color: #f94a32;
-					 line-height: 1.65em;
-					 padding: 0px;
-					 font-family: Tahoma;
-					 text-decoration:none;
-					 font-variant: small-caps;
-				  }
-a:hover {
-	color:#333;
-	border-bottom: 3px solid #f94a32;
-	text-decoration: underline;
-}
-
 
 /************ MEDIA QUERIES - LAPTOP **************/
 @media only screen and (min-width: 824px) and (max-width: 1060px) {
@@ -163,6 +196,7 @@ a:hover {
 									}
 @media only screen and (min-width: 628px) and (max-width: 823px) {
 										section, footer { width: 60%; }
+										.to-top {right: 50px;}
 										.slick-prev { left: -10px; }
 										.slick-next { right: -10px; }
 									}
@@ -171,7 +205,7 @@ a:hover {
 										body {  
 											overflow-x: hidden;}
 
-										h1, span{
+										h1, .greeting{
 											font-size: 45px;
 											line-height: 1em;
 										}
@@ -189,9 +223,10 @@ a:hover {
 											font-size: 1em;
 										}
 
+										.to-top { right: 0; }
 										.slick-prev { left: -15px; }
 										.slick-next { right: -15px; }
-									} 
+									}
 
 /************ MEDIA QUERIES - MOBILE **************/
 @media only screen and (max-device-width: 1143px) {
@@ -203,7 +238,7 @@ a:hover {
 									}
 
 @media only screen and (max-device-width: 890px) { 
-										h1, span {
+										h1, .greeting {
 											font-size: 55px;
 											line-height: 1em;
 										}
@@ -233,7 +268,7 @@ a:hover {
 
 @media only screen and (max-device-width: 598px)  {
 
-										h1, span {
+										h1, .greeting {
 											font-size: 55px;
 											line-height: 1em;
 										}
@@ -291,7 +326,7 @@ a:hover {
 										header {padding: 100px 0 20px 0;
 										}
 
-										h1, span {
+										h1, .greeting {
 											font-size: 60px;
 											line-height: 1em;
 										}
@@ -311,7 +346,7 @@ a:hover {
 										div .text{ 
 											font-size: 1em;
 										}
-
+										.to-top { right: 0; }
 										.slick-prev { left: -25px; }
 										.slick-next { right: -25px; }
 									} 
