--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,28 @@
 @import url(http://fonts.googleapis.com/css?family=Strait);
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 
+/********** BASE **********/
+
 body {
-		 text-align: center;
-		 font-size: 16px;
-		 min-height: 100%;
-		 margin: 0;
-		 font-family: 'Strait', Tahoma, Helvetica;
-		 line-height: 25px;
-		 background:#fff;
-	  }
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+  min-height: 100%;
+  margin: 0;
+  font-family: 'Strait', Tahoma, Helvetica;
+  line-height: 25px;
+  background:#333;
+}
 
 h1 {
 	font-size: 34px;
+  color: #fff;
 }
 
 h2 {
-	font-family: 'Pacifico', cursive;
-	font-size: 34px;
+  font-family: 'Pacifico', cursive;
+  font-size: 34px;
+  color: #ddd;
 }
 
 h3 {
@@ -25,31 +30,46 @@ h3 {
 }
 
 p {
-	 font-family: 'Strait', Tahoma, Helvetica;
-	 line-height: 1.8em;
-	 font-weight: 400;
-	}
-
-a, a:link, a:visited {
-					 color: #f94a32;
-					 line-height: 1.65em;
-					 padding: 0px;
-					 font-family: Tahoma, Helvetica;
-					 text-decoration:none;
-					 margin: 0 5px;
-					 font-variant: small-caps;
-				  }
-a:hover {
-	color:#333;
-	border-bottom: 3px solid #f94a32;
-	text-decoration: underline;
+  font-family: 'Strait', Tahoma, Helvetica;
+  line-height: 1.8em;
+  font-weight: 400;
 }
 
-/********** SECTIONS *********/
+em {
+  font-weight: 600;
+  background: #ff5139;
+  color: #333333;
+  padding: 2px;
+}
+
+u { border-bottom: 2px solid #f94a32; }
+
+strong {
+  font-family: Georgia;
+  font-weight: 600;
+  font-size: 0.95em;
+  color: #f94a32;
+  border-bottom: dotted 2px #bababa;
+  line-height: 1.93em;
+}
+
+hr {
+  border-top: none;
+  border-left:none;
+  border-right: none;
+  border-bottom: 1px dashed #f94a32;
+  height: 2px;
+  margin: 2em auto;
+  padding: 2px;
+  clear:both;
+}
+
+/********** LAYOUT *********/
 
 .greeting {
 	font-family: 'Pacifico', cursive;
-	font-size: 40px;
+	font-size: 50px;
+  color: #f94a32;
 }
 
 section, footer {
@@ -61,69 +81,61 @@ section {
 	margin: 10px auto;
 	}
 
-header { 
-	background: #f94a32; 
+header {
+	background: #333;
 	padding-top: 150px;
 	padding-bottom: 50px;
 }
 
 header .text {width: inherit;}
 
-nav { 
+nav {
 	font-size: 1.2em;
-	color: #fff; 
+	color: #fff;
 }
 
-nav a:link, nav a:visited, nav a:active { color: #fff; }
 
-footer { clear: both; 
-		 text-align: center;
-		 margin: auto;
-		 padding-bottom: 50px;
-		}
+footer { clear: both;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 50px;
+}
 
 
-/********** GRAY TEXT BOXES *********/
+/********** LAYOUT - GRAY TEXT BOXES *********/
 .text {
-		 font-size: 1em;
-		 line-height: 1.5em;
-		 margin: 1em auto;
-		 font-family: 'Strait', Arial;
-		 text-align: center;
-		 color: #f9f2f2;
-		}
-
-.text { 
-	background: #333;
-	padding: 1em; }
-
-.text a:link, .text a:visited { 
-	font-size: 1em;
-	color: #f94a32; 
+  font-size: 1em;
+  line-height: 1.5em;
+  margin: 1em auto;
+  font-family: 'Strait', Arial;
+  text-align: center;
+  color: #f9f2f2;
 }
 
-.text a:hover { color: #fff;
-		  background: #f94a32;
-		  padding:2px;
-		}
+.text {
+	background: #333;
+	padding: 1em;
+}
 
-/********** SLIDER ***********/
+
+/********** MODULE - SLIDERS ***********/
 .img-slider img {
 	width: 275px;
 	margin: auto;
 }
-.img-slider {width: 300px !important;
-			margin: auto;
-		}
+.img-slider {
+  width: 300px !important;
+	margin: auto;
+}
 
-.slick-prev, .slick-next { 
+.slick-prev, .slick-next {
 	font-family: 'Pacifico', Impact, cursive;
 	color:#f94a32;
 }
 .slick-prev { 	left: -30px; }
 .slick-next { right: -30px; }
 
-/********** TYPE EFFECT *******/
+/********** MODULE - TYPE EFFECT *******/
 .type-effect {
 	font-family: Courier;
 	font-weight: 600;
@@ -133,11 +145,11 @@ footer { clear: both;
 .type-cursor {
 	width: 15px;
 	height: 7px;
-	background: #000;
+	background: #fff;
 	display: inline-block;
 }
 
-/********** MISC *************/
+/********** MODULES - MISC *************/
 
 .to-top {
 	display:inline;
@@ -154,202 +166,200 @@ footer { clear: both;
 }
 .top-of-page {margin:0;}
 
-hr {
-	border-top:1px solid #bababa; 
-	border-left:none; 
-	border-right: none;
-	border-bottom: 1px dashed #f94a32;
-	width: 75%;
-	height: 2px;
-	margin: 2em auto;
-	clear:both;
-}
 
 .stack {
 	color: #ff5139;
 	font-style: italic;
 }
 
-em {
-	 font-weight: 600;
-	 background: #ff5139;
-	 color: #333333;
-	 padding: 2px;
+/********** STATES **********/
+
+a, a:link, a:visited {
+  color: #f94a32;
+  line-height: 1.65em;
+  padding: 0px;
+  font-family: Tahoma, Helvetica;
+  text-decoration:none;
+  margin: 0 5px;
+  font-variant: small-caps;
 }
 
-u { border-bottom: 2px solid #f94a32; }
-
-strong {
-	 font-family: Georgia;
-	 font-weight: 600;
-	 font-size: 0.95em;
-	 color: #f94a32;
-	 border-bottom: dotted 2px #bababa;
-	 line-height: 1.93em;
+a:hover {
+	color:#fff;
 }
 
+nav a:link,
+nav a:visited,
+nav a:active { color: #fff; }
+
+.text a:link, .text a:visited {
+	font-size: 1em;
+	color: #f94a32;
+}
+
+.text a:hover { color: #fff;
+  background: #f94a32;
+  padding:2px;
+}
 
 /************ MEDIA QUERIES - LAPTOP **************/
 @media only screen and (min-width: 824px) and (max-width: 1060px) {
-										.slick-prev { left: -10px; }
-										.slick-next { right: -10px; }
-									}
+	.slick-prev { left: -10px; }
+	.slick-next { right: -10px; }
+}
 @media only screen and (min-width: 628px) and (max-width: 823px) {
-										section, footer { width: 60%; }
-										.to-top {right: 50px;}
-										.slick-prev { left: -10px; }
-										.slick-next { right: -10px; }
-									}
+	section, footer { width: 60%; }
+	.to-top {right: 50px;}
+	.slick-prev { left: -10px; }
+	.slick-next { right: -10px; }
+}
 
 @media only screen and (min-width: 463px) and (max-width: 627px) {
-										body {  
-											overflow-x: hidden;}
+	body {
+		overflow-x: hidden;}
 
-										h1, .greeting{
-											font-size: 45px;
-											line-height: 1em;
-										}
+	h1, .greeting{
+		font-size: 45px;
+		line-height: 1em;
+	}
 
-										header { padding: 100px 0 20px 0; }
-										header .text { font-size: 1em; }
+	header { padding: 100px 0 20px 0; }
+	header .text { font-size: 1em; }
 
-										section, footer {
-											width: 75%;
-											margin: auto;
-										}
+	section, footer {
+		width: 75%;
+		margin: auto;
+	}
 
-										div .text{ 
-											width: 100%;
-											font-size: 1em;
-										}
+	div .text{
+		width: 100%;
+		font-size: 1em;
+	}
 
-										.to-top { right: 0; }
-										.slick-prev { left: -15px; }
-										.slick-next { right: -15px; }
-									}
+	.to-top { right: 0; }
+	.slick-prev { left: -15px; }
+	.slick-next { right: -15px; }
+}
 
 /************ MEDIA QUERIES - MOBILE **************/
 @media only screen and (max-device-width: 1143px) {
-										p { width: 100%; }
-										section, footer {width:50%;}
+	p { width: 100%; }
+	section, footer {width:50%;}
 
-										.slick-prev { left: -40px; }
-										.slick-next {  right: -40px; }
-									}
+	.slick-prev { left: -40px; }
+	.slick-next {  right: -40px; }
+}
 
-@media only screen and (max-device-width: 890px) { 
-										h1, .greeting {
-											font-size: 55px;
-											line-height: 1em;
-										}
+@media only screen and (max-device-width: 890px) {
+	h1, .greeting {
+		font-size: 55px;
+		line-height: 1em;
+	}
 
-										h2 { font-size: 40px; }
+	h2 { font-size: 40px; }
 
-										section, footer { width:67%;}
+	section, footer { width:67%;}
 
-										nav { font-size: 25px; }
+	nav { font-size: 25px; }
 
-										header .text {
-											font-size: 0.9em;
-											line-height: 1em;
-										}
-										
-										div .text {
-											font-size: 1.1em;
-											line-height: 1em;
-											padding: 0.5em 1em;
-											width: 70%;
-										}	
+	header .text {
+		font-size: 0.9em;
+		line-height: 1em;
+	}
 
-										.slick-prev {  left: -30px; }
-										.slick-next {  right: -30px; }
-									}
+	div .text {
+		font-size: 1.1em;
+		line-height: 1em;
+		padding: 0.5em 1em;
+		width: 70%;
+	}
+
+	.slick-prev {  left: -30px; }
+	.slick-next {  right: -30px; }
+}
 
 
 @media only screen and (max-device-width: 598px)  {
+  h1, .greeting {
+  	font-size: 55px;
+  	line-height: 1em;
+  }
+  nav { font-size: 2em; }
+  section,footer { width:60%; }
 
-										h1, .greeting {
-											font-size: 55px;
-											line-height: 1em;
-										}
-										nav { font-size: 2em; }
-										section,footer { width:60%; }
+  header .text {
+  	line-height: 1em;
+  }
 
-										header .text {
-											line-height: 1em;
-										}
+  div .text {
+  	font-size: 1.5em;
+  	line-height: 1em;
+  	width: 100%; }
 
-										div .text { 
-											font-size: 1.5em;
-											line-height: 1em;
-											width: 100%; }
+  .slick-prev { left: -25px; }
+  .slick-next { right: -25px; }
 
-										.slick-prev { left: -25px; }
-										.slick-next { right: -25px; }
-
-									  } 
+}
 
 @media only screen and  (max-device-width: 451px) {
-									
-										body {  
-											overflow-x: hidden;}
+	body {
+		overflow-x: hidden;}
 
-										h1{
-											font-size: 60px;
-											line-height: 1em;
-										}
+	h1{
+		font-size: 60px;
+		line-height: 1em;
+	}
 
-										h2 {font-size: 50px; }
+	h2 {font-size: 50px; }
 
-										header { padding: 100px 0 20px 0; }
-										header .text { font-size: 0.9em; }
+	header { padding: 100px 0 20px 0; }
+	header .text { font-size: 0.9em; }
 
-										section, footer {
-											width: 75%;
-											margin: auto;
-										}
+	section, footer {
+		width: 75%;
+		margin: auto;
+	}
 
-										div .text{ 
-											width: 100%;
-											font-size: 1em;
-										}
+	div .text{
+		width: 100%;
+		font-size: 1em;
+	}
 
-										.slick-prev { left: -25px; }
-										.slick-next { right: -25px; }
-									} 
+	.slick-prev { left: -25px; }
+	.slick-next { right: -25px; }
+}
 
 @media only screen and (max-device-width: 360px) {
-									
-										body {  
-											overflow-x: hidden;}
+  body {
+  	overflow-x: hidden;}
 
-										header {padding: 100px 0 20px 0;
-										}
+  header {padding: 100px 0 20px 0;
+  }
 
-										h1, .greeting {
-											font-size: 60px;
-											line-height: 1em;
-										}
+  h1, .greeting {
+  	font-size: 60px;
+  	line-height: 1em;
+  }
 
-										header .text { 
-											font-size: 0.85em;
-											line-height: 40px;
-											padding: 20px 10px; }
+  header .text {
+  	font-size: 0.85em;
+  	line-height: 40px;
+  	padding: 20px 10px; }
 
-										nav { font-size: 45px; }
+  nav { font-size: 45px; }
 
-										section, footer {
-											margin: auto;
-											width: 95%;
-										}
+  section, footer {
+  	margin: auto;
+  	width: 95%;
+  }
 
-										div .text{ 
-											font-size: 0.90em;
-										}
-										.to-top { 
-                      right: 0;
-                      font-size: 0.85em;
-                     }
-										.slick-prev { left: -25px; }
-										.slick-next { right: -25px; }
-									} 
+  div .text{
+  	font-size: 0.90em;
+  }
+  .to-top {
+    right: 0;
+    font-size: 0.85em;
+   }
+  .slick-prev { left: -25px; }
+  .slick-next { right: -25px; }
+}
